# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import adminRouter from "./admin";
 import { publicServersRouter, adminServersRouter } from "./servers";
 import { adminRelaysRouter } from "./relays";
 import { relayOperatorRouter } from "./relay-operator";
+import bulletinsRouter from "./bulletins";
 
 const router: IRouter = Router();
 
@@ -16,6 +17,7 @@ router.use("/admin", adminRouter);
 router.use("/admin", adminServersRouter);
 router.use("/admin", adminRelaysRouter);
 router.use("/relay-operator", relayOperatorRouter);
+router.use("/admin", bulletinsRouter);
 router.use(publicServersRouter);
 
 export default router;
